--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ before_install:
 script:
   - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("ParallelSparseMatMul"))`); Pkg.pin("ParallelSparseMatMul"); Pkg.resolve()'
   - julia -e 'using ParallelSparseMatMul; @assert isdefined(:ParallelSparseMatMul); @assert typeof(ParallelSparseMatMul) === Module'
+  - julia test/test.jl
